# bambu-buddy

./: .env.example  .firebaserc  .gitignore  DEPLOYMENT.md  FIREBASE_SETUP.md  LICENSE  NEXT_STEPS.md  OAUTH_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RECAP.txt  TAURI_GOOGLE_AUTH.md  TROUBLESHOOTING.md  deploy-firebase.sh  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  storage.rules  tailwind.config.js  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: deploy.yml
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/filaments/: FilamentCard.tsx  FilamentForm.tsx  StockModal.tsx
src/components/jobs/: JobCard.tsx  JobDetail.tsx  JobForm.tsx  KanbanBoard.tsx  KanbanColumn.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/sales/: DateFilter.tsx  SalesChart.tsx  SalesTable.tsx
src/components/ui/: Badge.tsx  (+14 more)
src/contexts/: AuthContext.tsx  ToastContext.tsx
src/hooks/: useCountUp.ts  useFirestore.ts
src/lib/: firebase.ts  utils.ts
src/pages/: Dashboard.tsx  Filaments.tsx  Jobs.tsx  Landing.tsx  Login.tsx  Sales.tsx  Settings.tsx  Statistics.tsx  Templates.tsx  Wallet.tsx
src/services/: export.ts  filaments.ts  jobs.ts  notifications.ts  oauth.ts  storage.ts  templates.ts
src/types/: index.ts
src/utils/: calculations.ts  dateFilters.ts  export.ts  salesFilters.ts  seedData.ts
(+11 files in other folders)
