[package]
name = "bambu-buddy"
version = "0.1.0"
description = "Bambu Buddy desktop application"
authors = ["Moussandou"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.2", features = [] }

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
