[package]
name = "bambu-buddy"
version = "0.1.0"
description = "Bambu Buddy desktop application"
authors = ["Moussandou"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.2", features = [] }
open = "5.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lazy_static = "1.4"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
